--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,6 +15,10 @@
     
 }
 
+.primary-color{
+    color: rgb(0,174,243);
+}
+
 .navbar ul{
     display: flex;
     gap: 40px;
@@ -34,30 +38,7 @@
 
 /* background section */
 
-.background-img{
-    /* background-image: url('/src/images/background-tbc.webp');
-    width: 100%;
-    height: 352px;
-    background-size: 100%;
-    background-repeat: no-repeat; */
-   
-    background-image: url('/src/images/background-tbc.webp');
-    width: 100%;
-    height: 352px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
 
- 
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    color: rgb(244,244,244);
-    font-weight: 900;
-    font-size: 42px;
-}
 
 .text-34{
     font-size: 34px;
@@ -87,7 +68,7 @@
     gap: 40px;
 }
 .tbc-info a{
-    color:rgb(0,174,211);
+    /* color:rgb(0,174,211); */
     cursor: pointer;
     font-size: 22px;
     font-weight: 900;
@@ -98,4 +79,41 @@
 
 .line-height{
     line-height: 46px;
+  
 }
+/* ///////// */
+
+.background-container {
+    position: relative;
+}
+
+.background-img {
+    background-image: url('/src/images/background-tbc.webp');
+    width: 100%;
+    height: 352px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.text-overlay {
+    position: absolute;
+    top: 50%; 
+    left: 43%; 
+    transform: translate(-50%, -50%);
+    color: rgb(244,244,244); 
+    font-family: 900;
+}
+
+.text-overlay span{
+    font-size: 42px;
+    font-family: 900;
+}
+
+.text-overlay h1{
+    line-height: 66px;
+}
+
+/* header{
+    overflow: hidden;
+} */
