--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,6 @@
+
+@import url('/src/styles/queries.css');
+
 *{
     margin: 0;
     padding: 0;
@@ -30,10 +33,13 @@
 .navbar li{
    list-style: none;
    font-weight: 100;
+       font-family: Arial, Helvetica, sans-serif;
+
 }
 .navbar li:hover{
     color: rgb(5,146,199);
     cursor: pointer;
+    transition: 0.5s;
 }
 
 /* background section */
@@ -46,6 +52,7 @@
 
 .text-32{
     font-size: 32px;
+    color:rgba(244, 244, 244, 0.367) ;
     color:rgb(244,244,244) ;
 }
 
@@ -79,6 +86,7 @@
 
 .line-height{
     line-height: 46px;
+    font-family: Arial, Helvetica, sans-serif;
   
 }
 /* ///////// */
@@ -103,11 +111,12 @@
     transform: translate(-50%, -50%);
     color: rgb(244,244,244); 
     font-family: 900;
+    font-family: sans-serif;
 }
 
 .text-overlay span{
     font-size: 42px;
-    font-family: 900;
+    font-weight: 800;
 }
 
 .text-overlay h1{
@@ -117,3 +126,97 @@
 /* header{
     overflow: hidden;
 } */
+
+
+/* mbile nav */
+
+.btn-mobile-nav{
+    border: none;
+    background: none;
+    cursor: pointer;
+    display: none;
+}
+
+.close-menu-icon{
+    display: none;
+}
+
+@media (max-width: 950px){
+   
+   
+    .navbar{
+    gap: 150px;
+    }
+    .text-overlay{
+        left: 40%;
+    }
+}
+
+@media (max-width: 750px){
+     .btn-mobile-nav{
+        display: block;
+    }
+   
+    .navbar ul{
+    /* display: none; */
+    }
+
+    .navbar{
+    justify-content: space-between;
+    }
+    .text-34{
+        font-size: 28px;
+    }
+    .text-overlay{
+        left: 35%;
+    }
+    .text-overlay span{
+        font-size: 34px;
+    }
+    .text-overlay h1{
+    line-height: 46px;
+}
+   .text-32 {
+    font-size: 20px;
+    padding: 0px 10px;
+}   .line-height{
+    line-height: 30px;
+}
+.navbar-open{
+    position: absolute;
+    background-color: rgb(26,30,31);
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    align-items: end;
+    justify-content: start;
+    z-index: 1;
+    flex-direction: column;
+    padding: 20px;
+    
+} .close-menu-icon{
+    display: block;
+}
+}
+
+.menu-icon{
+    fill: aliceblue;
+}
+
+.navbar-open{
+    position: absolute;
+    background-color: rgb(26,30,31);
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    align-items: end;
+    justify-content: start;
+    z-index: 1;
+    flex-direction: column;
+    padding: 20px;
+    
+}
