--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,7 +22,7 @@
     color: rgb(0,174,243);
 }
 
-.navbar ul{
+.nav-list{
     display: flex;
     gap: 40px;
     color: rgb(244,244,244);
@@ -157,8 +157,8 @@
         display: block;
     }
    
-    .navbar ul{
-    /* display: none; */
+    .nav-list{
+    display: none;
     }
 
     .navbar{
@@ -182,29 +182,9 @@
 }   .line-height{
     line-height: 30px;
 }
-.navbar-open{
-    position: absolute;
-    background-color: rgb(26,30,31);
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100vh;
-    display: flex;
-    align-items: end;
-    justify-content: start;
-    z-index: 1;
-    flex-direction: column;
-    padding: 20px;
-    
-} .close-menu-icon{
-    display: block;
-}
-}
-
 .menu-icon{
     fill: aliceblue;
 }
-
 .navbar-open{
     position: absolute;
     background-color: rgb(26,30,31);
@@ -219,4 +199,8 @@
     flex-direction: column;
     padding: 20px;
     
+} 
+.close-menu-icon{
+    display: block;
+}
 }
