--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,6 +9,7 @@
 /* NAVBAR */
 html{
       overflow-x: hidden;
+      scroll-behavior: smooth;
 }
 body{
     overflow-x: hidden;
@@ -27,6 +28,8 @@ body{
     position: fixed;
     width: 100%;
     z-index: 1;
+            transition: all 0.5s ease;
+
     /* background:transparent; */
     /* opacity: 0.9; */
 }
@@ -167,14 +170,16 @@ body{
    padding-top: 40px;
    padding-left: 300px;
    padding-right: 300px;
+   padding-bottom: 50px;
 }
+
+
 
 .box-wrapper{
 display: flex;
 gap: 40px;
 flex-wrap: wrap;
 width: 100%;
-/* row-gap: 10em; */
 justify-content: center;
 }
 .box-header{
@@ -191,6 +196,7 @@ justify-content: center;
     border: 1px solid rgb(85,85,85);
     border-radius: 6px;
     padding-bottom: 30px;
+    
 
 }
 
@@ -247,12 +253,19 @@ justify-content: center;
 
 
 @media (max-width: 750px){
+
+    .nav-hidden {
+        transition: all 0.5s ease;
+  transform: translateY(-100%);
+}
      .btn-mobile-nav{
         display: block;
     }
    
     .nav-list{
     display: none; 
+    /* transform: translateX(1%); */
+    /* visibility: hidden; */
    
     }
   
@@ -316,6 +329,53 @@ justify-content: center;
     cursor: pointer;
     display: block;
 }
+}
+
+/* project partners section */
+
+.project-partners{
+    background-color: rgb(43,43,43);
+    color: rgb(231,244,244);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 50;
+    padding: 30px 80px;
+    padding-bottom: 100px;
+    
+}
+.partners-box{
+    display: flex;
+    justify-content: space-between;
+}
+.right-arrow{
+    cursor: pointer;
+   rotate: 180deg;
+   /* fill:rgb(226,224,224) */
+}
+.right-arrow:hover{
+    fill: rgb(181,179,179);
+}
+.arrow{
+    cursor: pointer;
+    fill: white;
+}
+.arrow:hover{
+    fill: rgb(181,179,179);
+}
+.partners-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 70px;
+}
+
+.partner-box{
+    display: flex;
+    flex-direction: column;
+    gap:100px
+}
+
+.partner-box h2{
+    padding-left: 430px;
 }
 
 @media (max-width: 950px){
