--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -412,7 +412,9 @@ justify-content: center;
     padding-left: 40px;
 }
 .box-header h2{
-    padding-left: 10px;
+    /* padding-left: 10px; */
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .primary-color{
     padding-left: 10px;
@@ -432,6 +434,30 @@ justify-content: center;
 .box-img a{
     margin-top: 0;
 }
+}
+.partners-wrapper{
+    flex-direction: column;
+    gap: 50px;
+}
+.partner-box h2{
+    text-align: center;
+    padding-left: 0;
+}
+.project-partners{
+    padding: 0;
+}
+
+.partner-box{
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+}
+.arrow, .right-arrow{
+    display: none;
+}
+.partners-box{
+    justify-content: center;
 }
 
 @media (max-width: 1350px){
