--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -185,7 +185,7 @@ justify-content: center;
 .box-header{
     margin-bottom: 60px;
     color: rgb(219,219,219);
-    padding-left: 160px;
+    /* padding-left: 160px; */
 }
 
 .box-img{
@@ -247,6 +247,13 @@ justify-content: center;
     color: rgb(236,236,236);
     font-weight: 800;
 
+
+}
+
+.partner-box{
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
 
 }
 
@@ -340,14 +347,13 @@ justify-content: center;
     font-weight: 50;
     padding: 30px 80px;
     padding-bottom: 100px;
-    
 }
 .partners-box{
     display: flex;
     justify-content: space-between;
 }
 .right-arrow{
-    cursor: pointer;
+   cursor: pointer;
    rotate: 180deg;
    /* fill:rgb(226,224,224) */
 }
@@ -372,17 +378,32 @@ justify-content: center;
 .partners-box{
     display: flex;
     /* flex-direction: column; */
-    gap:100px;
+    /* gap:100px; */
     align-items: center;
 }
 
 .partner-box h2{
     padding-left: 430px;
 }
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px; 
+  /* padding: 20px; */
+}
 
 @media (max-width: 950px){
+    .grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 40px; 
+  /* padding: 20px; */
+}
    .box-header{
     padding-left: 0;
+   }
+   .tbc-info{
+    padding: 65px 30px;
    }
  
     .navbar{
@@ -391,13 +412,46 @@ justify-content: center;
     .text-overlay{
         left: 40%;
     }
+    .partners-wrapper{
+    flex-direction: column;
+    gap: 50px;
+}
+.partner-box h2{
+    text-align: center;
+    padding-left: 0;
+}
+.project-partners{
+    padding: 0;
+}
+
+.partner-box{
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+}
+.arrow, .right-arrow{
+    display: none;
+}
+.partners-box{
+    justify-content: center;
+}
 }
 
 @media (max-width: 450px){
+    .grid-container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 40px; 
+  /* padding: 20px; */
+}
 .navbar{
     display: flex;
     justify-content: center;
     gap:100px
+}
+.tbc-info{
+    padding: 30px 0;
 }
 
 .courses-section{
@@ -405,11 +459,11 @@ justify-content: center;
     padding-right: 0;
     padding: 20px 0;
 }
-.box-header{
+/* .box-header{
     margin-left: 50px;
-}
+} */
 .tbc-info div{
-    padding-left: 40px;
+    padding-left: 20px;
 }
 .box-header h2{
     /* padding-left: 10px; */
@@ -434,36 +488,25 @@ justify-content: center;
 .box-img a{
     margin-top: 0;
 }
-}
-.partners-wrapper{
-    flex-direction: column;
-    gap: 50px;
-}
-.partner-box h2{
-    text-align: center;
-    padding-left: 0;
-}
-.project-partners{
-    padding: 0;
+
 }
 
-.partner-box{
-    padding: 30px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 60px;
+@media (max-width:650px){
+    .grid-container {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 40px; 
+  /* padding: 20px; */
 }
-.arrow, .right-arrow{
-    display: none;
-}
-.partners-box{
-    justify-content: center;
 }
 
 @media (max-width: 1350px){
     .courses-section{
         padding-left: 0;
         padding-right: 0;
+    }
+    .partners-wrapper{
+        gap: 40px;
     }
 }
 
@@ -472,7 +515,7 @@ justify-content: center;
     padding-left: 0;
    }
     .courses-section{
-        padding-left: 50px;
-        padding-right: 50px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 }
