--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -64,6 +64,16 @@ body{
 }
 
 /* background section */
+.text-20{
+     color: rgb(0,174,243);
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: 900;
+}
+.text-24{
+    font-size: 30px;
+    color: rgb(244,244,244);
+}
 .text-34{
     font-size: 34px;
 }
@@ -266,6 +276,43 @@ justify-content: center;
     align-items: center;
     gap: 120px;
 }
+
+/* FAQ SECTION */
+
+.faq-section{
+    background-color: rgb(22,22,22);
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+}
+.faq-link{
+    display: flex;
+    justify-content: space-between;
+   
+}
+
+.questions{
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    gap: 450px;
+    border-bottom: 1px solid rgb(53,49,49);
+    padding-bottom: 25px;
+        font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.questions p {
+    font-size: 20px;
+    color:rgb(244,244,244) ;
+}
+
+.faq-box{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
 
 @media (max-width: 750px){
 
