--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -296,7 +296,7 @@ justify-content: center;
     cursor: pointer;
     display: flex;
     justify-content: space-between;
-    gap: 450px;
+    /* gap: 450px; */
     padding-bottom: 25px;
         font-family: Arial, Helvetica, sans-serif;
 
@@ -492,7 +492,24 @@ justify-content: center;
 }
 
 @media (max-width: 950px){
-    .grid-container {
+/* accordion section */
+.hidden-box {
+    padding: 0px 30px;
+}
+.hidden-box-2 {
+    padding: 0px 50px;
+}
+.hidden-box-3 {
+    padding: 0px 50px;
+}
+.faq-box{
+    padding: 0 100px;
+}
+.faq-link{
+    padding: 0px 10px;
+}
+
+ .grid-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 40px; 
