--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -50,6 +50,9 @@ body{
     align-items: center;  
     
 }
+.nav-list a{
+font-size: 18px;
+}
 
 .navbar li{
    list-style: none;
@@ -147,7 +150,7 @@ body{
 }
 
 .text-overlay span{
-    font-size: 42px;
+    font-size: 44px;
     font-weight: 800;
 }
 
@@ -507,7 +510,7 @@ justify-content: center;
     padding: 0px 50px;
 }
 .faq-box{
-    padding: 0 100px;
+    padding: 0 50px;
 }
 .faq-link{
     padding: 0px 10px;
