--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -59,6 +59,8 @@ font-size: 18px;
    list-style: none;
    font-weight: 100;
     font-family: Arial, Helvetica, sans-serif;
+    transition: 0.5s;
+
 
 }
 .navbar li:hover{
@@ -526,6 +528,51 @@ justify-content: center;
 
 .hidden-question-2{
     display: none;
+}
+
+/* FOOTER SECTION */
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(26,30,31);
+    padding: 50px 550px;
+}
+.footer-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    
+}
+
+.footer-box{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+.footer-link{
+    font-size: 22px;
+    color: rgb(255,250,252);
+    background-color: rgb(0,174,243);
+    padding: 8px 30px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    text-decoration: none;
+}
+.footer-link:hover{
+   color: rgb(43,43,43);
+   background-color:rgba(255, 250, 252, 0.789) ;
+   transition: all 0.3s ease-in-out;
+}
+
+.footer-box div{
+    display: flex;
+    justify-content: end;
+    gap: 10px;
+}
+.footer-box img{
+    cursor: pointer;
 }
 @media (max-width: 950px){
 /* accordion section */
