--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -264,7 +264,7 @@ justify-content: center;
 .text-14{
     font-size: 14px;
     color: rgb(236,236,236);
-    font-weight: 400;
+    font-weight: 600;
 
 
 }
@@ -305,9 +305,8 @@ justify-content: center;
     cursor: pointer;
     display: flex;
     justify-content: space-between;
-    /* gap: 450px; */
     padding-bottom: 25px;
-        font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 .questions-wrapper{
@@ -390,10 +389,11 @@ justify-content: center;
         }
 
 @media (max-width: 750px){
+  
 
     .nav-hidden {
         transition: all 0.5s ease;
-  transform: translateY(-100%);
+        transform: translateY(-100%);
 }
      .btn-mobile-nav{
         display: block;
@@ -536,7 +536,7 @@ footer{
     display: flex;
     justify-content: space-between;
     background-color: rgb(26,30,31);
-    padding: 50px 550px;
+    padding: 50px 520px;
 }
 .footer-wrapper{
     display: flex;
@@ -665,12 +665,46 @@ footer{
 }
 }
 
+  .display-none{
+        display: none;
+    }
+
+    .rights{
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
 @media (max-width: 450px){
     .grid-container {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 40px; 
 
+}
+.rights{
+    flex-direction: column-reverse;
+}
+
+.display-none{
+    display: flex;
+    gap: 70px;
+}
+.display-none div{
+    display: flex;
+    gap:10px
+}
+
+.hidden-div{
+    display: none;
+}
+.footer{
+    padding: 30px 30px;
+}
+.footer-link{
+    padding: 5px 15px;
+}
+.questions p{
+    font-size: 24px;
 }
 
 
@@ -725,9 +759,14 @@ footer{
   grid-gap: 40px; 
   /* padding: 20px; */
 }
+.footer{
+    padding: 30px 30px;
+}
 .hidden-question-2{
     display: block;
     text-align: center;
+    font-size: 24px;
+    margin-top: 20px;
 }
 .hidden-box.show{
     max-height: 800px;
@@ -769,6 +808,10 @@ footer{
     .courses-section{
         padding-left: 0px;
         padding-right: 0px;
+    }
+
+    footer{
+        padding: 50px 100px;
     }
 }
 
@@ -871,3 +914,5 @@ footer{
     .dot.active {
       background-color: white;
     }
+
+  
