--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -52,21 +52,26 @@ body{
     
 }
 .nav-list a{
-font-size: 18px;
+    font-size: 18px;
+    text-decoration: none;
+    color: rgb(244,244,244);
+        transition: 0.5s;
+
+    
 }
 
 .navbar li{
-   list-style: none;
-   font-weight: 100;
-    font-family: Arial, Helvetica, sans-serif;
-    transition: 0.5s;
-
-
+    list-style: none;
+    font-weight: 100;
+    font-family: Arial, Helvetica, sans-serif;  
 }
-.navbar li:hover{
+.nav-list a:hover{
     color: rgb(5,146,199);
     cursor: pointer;
     transition: 0.5s;
+}
+.navbar img{
+    cursor: pointer;
 }
 
 /* background section */
