--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,104 +1,21 @@
 
-@import url('/src/styles/queries.css');
-
 *{
     margin: 0;
     padding: 0;
 }
-
-/* NAVBAR */
-
 html{
-      overflow-x: hidden;
-      scroll-behavior: smooth;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 body{
     overflow-x: hidden;
 }
-.navbar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(26,30,31);
-    gap: 350px;
-    padding: 24px 0;
-    position: relative;
-    
-}
-.nav-container{
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-            transition: all 0.5s ease;
-
-    /* background:transparent; */
-    /* opacity: 0.9; */
-}
-
-.nav-transparent{
-    opacity: 0.9;
-}
-
-.primary-color{
-    color: rgb(0,174,243);
-    /* padding-left: 10px; */
-}
-
-.nav-list{
-    display: flex;
-    gap: 40px;
-    color: rgb(244,244,244);
-    align-items: center;  
-    
-}
-.nav-list a{
-    font-size: 18px;
-    text-decoration: none;
-    color: rgb(244,244,244);
-        transition: 0.5s;
-
-    
-}
-
-.navbar li{
-    list-style: none;
-    font-weight: 100;
-    font-family: Arial, Helvetica, sans-serif;  
-}
-.nav-list a:hover{
-    color: rgb(5,146,199);
-    cursor: pointer;
-    transition: 0.5s;
-}
-.navbar img{
-    cursor: pointer;
-}
 
 /* background section */
-.text-20{
-     color: rgb(0,174,243);
-    cursor: pointer;
-    font-size: 22px;
-    font-weight: 900;
-}
-.text-24{
-    font-size: 30px;
-    color: rgb(244,244,244);
-}
-.text-34{
-    font-size: 34px;
-}
-
-.text-32{
-    font-size: 32px;
-    color:rgb(244,244,244) ;
-}
-
 .background-img div{
     display: flex;
     flex-direction: column;  
 }
-
 .tbc-info{
     display: flex;
     flex-direction: column;
@@ -117,22 +34,22 @@ body{
     font-size: 22px;
     font-weight: 900;
     align-self: flex-start;
+    transition: all 0.3s ease;
 }
 .tbc-info a:hover{
-    color:rgb(170,170,170)
+    color:rgb(170,170,170);
+    transition: all 0.3s ease;
 }
 
 .line-height{
     line-height: 46px;
     font-family: Arial, Helvetica, sans-serif;
-  
 }
 /* ///////// */
 
 .background-container {
     position: relative;
     margin-top: 85px;
-   
 }
 
 .background-img {
@@ -142,7 +59,6 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top center;
-   
 }
 
 .text-overlay {
@@ -154,23 +70,18 @@ body{
     font-family: 900;
     font-family: sans-serif;
 }
-
 .text-overlay span{
     font-size: 44px;
     font-weight: 800;
 }
-
 .text-overlay h1{
     line-height: 66px;
 }
-
 .navbar-open{
     display: none;
 }
 
-
 /* mobile nav */
-
 .btn-mobile-nav{
     border: none;
     background: none;
@@ -182,23 +93,17 @@ body{
     display: none;
 }
 
-
-
 /* courses-section */
-
 .courses-section{
-    display: flex;
-    justify-content: center;
-    background-color: rgb(22,22,22);
-    color: white;
+   display: flex;
+   justify-content: center;
+   background-color: rgb(22,22,22);
+   color: white;
    padding-top: 40px;
    padding-left: 300px;
    padding-right: 300px;
    padding-bottom: 50px;
 }
-
-
-
 .box-wrapper{
 display: flex;
 gap: 40px;
@@ -220,8 +125,6 @@ justify-content: center;
     border: 1px solid rgb(85,85,85);
     border-radius: 6px;
     padding-bottom: 30px;
-    
-
 }
 
 .box-img div{
@@ -240,8 +143,6 @@ justify-content: center;
     display: flex;
     align-items: center;
     gap: 10px;
-    
-   
 }
 .box-img a:hover{
     color: rgb(6,130,177);
@@ -257,39 +158,18 @@ justify-content: center;
     flex-direction: column;
     justify-content: center;
 }
-
-
-
-.text-18{
-    font-size: 18px;
-    color: rgb(207,207,207);
-    font-weight: 900;
-}
-
-.text-14{
-    font-size: 14px;
-    color: rgb(236,236,236);
-    font-weight: 600;
-
-
-}
-
 .partner-box{
     display: flex;
     flex-direction: column;
     gap: 100px;
- 
-
 }
 
 .partners-wrapper div{
     display: flex;
     align-items: center;
-    /* gap: 120px; */
 }
 
 /* FAQ SECTION */
-
 .faq-section{
     background-color: rgb(22,22,22);
     padding: 80px 0;
@@ -300,10 +180,14 @@ justify-content: center;
     display: flex;
     justify-content: space-between;
     padding-bottom: 20px;
-   
+}
+.faq-link a{
+    transition: all 0.3s ease;
+
 }
 .faq-link a:hover{
-    color:rgb(170,170,170)
+    color:rgb(170,170,170);
+    transition: all 0.3s ease;
 }
 
 .questions{
@@ -316,7 +200,6 @@ justify-content: center;
 }
 .questions-wrapper{
     border-bottom: 1px solid rgb(53,49,49);
-
 }
 
 .questions p {
@@ -343,27 +226,22 @@ justify-content: center;
 }
 .hidden-box{
     padding-bottom: 10px;
-
 }
 .hidden-box-2{
     border-bottom: 1px solid rgb(53,49,49);
     padding-bottom: 10px;
-
 }
 .hidden-box-3{
     border-bottom: 1px solid rgb(53,49,49);
     padding-bottom: 10px;
-
 }
 .hidden-box-2 p{
     font-size: 18px;
     line-height: 30px;
-
 }
 .hidden-box-3 p{
     font-size: 18px;
     line-height: 30px;
-
 }
 .custom-partners-wrapper {
             display: flex;
@@ -373,7 +251,7 @@ justify-content: center;
 
         .custom-partners-wrapper .custom-group {
             display: flex;
-            text-align: center; /* Center images within each group */
+            text-align: center; 
             gap: 120px;
         }
 
@@ -381,8 +259,8 @@ justify-content: center;
             max-width: 100%;
             height: auto;
             display: none;
-            margin: 0 auto; /* Center images horizontally within each group */
-            transition: opacity 1s ease-in-out; /* Smooth transition for opacity changes */
+            margin: 0 auto; 
+            transition: opacity 1s ease-in-out; 
         }
 
         .right-arrow, .left-arrow {
@@ -392,100 +270,24 @@ justify-content: center;
         .project-partners{
             min-height: 280px;
         }
+        .rights a{
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .rights a:hover{
+            color: #bbbbbbdb;
+            transition: all 0.3s ease;
 
-@media (max-width: 750px){
-  
-
-    .nav-hidden {
-        transition: all 0.5s ease;
-        transform: translateY(-100%);
-}
-     .btn-mobile-nav{
-        display: block;
-    }
-   
-    .nav-list{
-    display: none;
-    }
-  
-
-    .navbar{
-    display: flex;
-    /* align-items: center; */
-    justify-content:space-between;
-    padding: 20px;
-    
-    }
-    .text-34{
-        font-size: 28px;
-    }
-    .text-overlay{
-        left: 35%;
-    }
-    .text-overlay span{
-        font-size: 34px;
-    }
-    .text-overlay h1{
-    line-height: 46px;
-}
-   .text-32 {
-    font-size: 20px;
-    padding: 0px 10px;
-}   .line-height{
-    line-height: 30px;
-}
-.menu-icon{
-    fill: aliceblue;
-}
-
-.navbar-open{
-    position: absolute;
-    background-color: rgb(26,30,31);
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100vh;
-    display: flex;
-    align-items: end;
-    justify-content: start;
-    z-index: 1;
-    flex-direction: column;
-    padding: 20px;
-    padding-top: 40px;
-    transform: translateX(100%);
-    font-size: 20px;
-    gap: 40px;
-    color: rgb(244,244,244);
-    transition: all 0.5s ease-in-out;
-
-
-} 
-
-.navbar-open-nav{
-    transform: translateX(0);
-    transition: all 0.5s ease-in-out;
-}
-.close-menu-icon{
-    display: block;
-}
-
-.btn-close-nav{
-    border: none;
-    background: none;
-    cursor: pointer;
-    display: block;
-}
-}
+        }
 
 /* project partners section */
-
 .project-partners{
     background-color: rgb(43,43,43);
     color: rgb(231,244,244);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 50;
     padding: 30px 80px;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
 }
 .partners-box{
     display: flex;
@@ -495,7 +297,6 @@ justify-content: center;
 .right-arrow{
    cursor: pointer;
    rotate: 180deg;
-   /* fill:rgb(226,224,224) */
 }
 .right-arrow:hover{
     fill: rgb(181,179,179);
@@ -509,15 +310,12 @@ justify-content: center;
 }
 .partners-wrapper{
     display: flex;
-    /* justify-content: space-between; */
     align-items: center;
     gap: 120px;
 }
 
 .partners-box{
     display: flex;
-    /* flex-direction: column; */
-    /* gap:100px; */
     align-items: center;
 }
 
@@ -528,318 +326,20 @@ justify-content: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 40px; 
-  /* padding: 20px; */
 }
 
 .hidden-question-2{
     display: none;
 }
+.display-none{
+     display: none;
+    }
 
-/* FOOTER SECTION */
-
-footer{
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(26,30,31);
-    padding: 50px 520px;
-}
-.footer-wrapper{
+.rights{
     display: flex;
     flex-direction: column;
     gap: 30px;
-    
-}
-
-.footer-box{
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-}
-.footer-link{
-    font-size: 22px;
-    color: rgb(255,250,252);
-    background-color: rgb(0,174,243);
-    padding: 8px 30px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    text-decoration: none;
-}
-.footer-link:hover{
-   color: rgb(43,43,43);
-   background-color:rgba(255, 250, 252, 0.789) ;
-   transition: all 0.3s ease-in-out;
-}
-
-.footer-box div{
-    display: flex;
-    justify-content: end;
-    gap: 10px;
-}
-.footer-box img{
-    cursor: pointer;
-}
-@media (max-width: 950px){
-/* accordion section */
-.group-3{
-    position: absolute;
-    transform: translateY(200%);
-}
-
-.dot-container{
-    position: absolute;
-    top: 430px;
-    left: 42%;
-}
-.hidden-box {
-    padding: 0px 30px;
-}
-.hidden-box-2 {
-    padding: 0px 50px;
-}
-.hidden-box-3 {
-    padding: 0px 50px;
-}
-.faq-box{
-    padding: 0 30px;
-}
-.faq-link{
-    padding: 0px 10px;
-}
-.custom-partners-wrapper .custom-group{
-    flex-direction: column;
-    gap: 50px;
-}
-
-.project-partners{
-    min-height: 481px;
-    position: relative;
-}
-
-
- .grid-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 40px; 
-  /* padding: 20px; */
-}
-
-
-/* .partners-wrapper div{
-    flex-direction: column;
-    gap: 60px;
-    animation: slide 5s ease-in infinite;
-} */
-
-   .box-header{
-    padding-left: 0;
-   }
-   .tbc-info{
-    padding: 65px 30px;
-   }
- 
-    .navbar{
-    gap: 150px;
     }
-    .text-overlay{
-        left: 40%;
-    }
-    .partners-wrapper{
-    gap: 50px;
-}
-.partner-box h2{
-    text-align: center;
-    padding-left: 0;
-}
-.project-partners{
-    padding: 0;
-}
-
-.partner-box{
-    padding: 30px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 60px;
-   
-}
-.arrow, .right-arrow{
-    display: none;
-}
-.partners-box{
-    justify-content: center;
-}
-}
-
-  .display-none{
-        display: none;
-    }
-
-    .rights{
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-    }
-@media (max-width: 450px){
-    .grid-container {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-gap: 40px; 
-
-}
-.rights{
-    flex-direction: column-reverse;
-}
-
-.display-none{
-    display: flex;
-    gap: 70px;
-}
-.display-none div{
-    display: flex;
-    gap:10px
-}
-
-.hidden-div{
-    display: none;
-}
-.footer{
-    padding: 30px 30px;
-}
-.footer-link{
-    padding: 5px 15px;
-}
-.questions p{
-    font-size: 24px;
-}
-
-
-.navbar{
-    display: flex;
-    justify-content: center;
-    gap:100px
-}
-.tbc-info{
-    padding: 30px 0;
-}
-
-.courses-section{
-    padding-left: 0;
-    padding-right: 0;
-    padding: 20px 0;
-}
-
-.tbc-info div{
-    padding-left: 20px;
-}
-.box-header h2{
-
-    font-size: 28px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.primary-color{
-    padding-left: 10px;
-}
-.box-wrapper{
-    gap: 20px;
-}
-.box-header{
-    margin-bottom: 20px;
-}
-.text-overlay{
-    left: 50%;
-}
-.text-overlay span{
-    font-size: 28px;
-}
-.box-img a{
-    margin-top: 0;
-}
-
-}
-
-@media (max-width:650px){
-    .grid-container {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-gap: 40px; 
-  /* padding: 20px; */
-}
-.footer{
-    padding: 30px 30px;
-}
-.hidden-question-2{
-    display: block;
-    text-align: center;
-    font-size: 24px;
-    margin-top: 20px;
-}
-.hidden-box.show{
-    max-height: 800px;
-}
-.hidden-question{
-    display: none;
-}
-
-.hidden-box{
-    padding: 0;
-    padding-bottom: 10px;
-
-}
-.hidden-box-2{
-    padding: 0;
-    padding-bottom: 10px;
-
-}
-.hidden-box-3{
-    padding: 0;
-    padding-bottom: 10px;
-}
-}
-
-@media (max-width: 1350px){
-    .courses-section{
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .partners-wrapper{
-        gap: 50px;
-    }
-}
-
-@media (max-width: 1650px){
- .box-header{
-    padding-left: 0;
-   }
-    .courses-section{
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-    footer{
-        padding: 50px 100px;
-    }
-}
-
-/*  */
-
-
-/* .gallery {
-  position: relative;
-  display: flex;
-  gap: 100px;
-}
-
-.gallery img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform:translateX(-350%);
-  transition: opacity 1s ease;
-} */
-
- /* .hidden {
-  opacity: 0;
-} */
 
 /* Accordion */
 .questions {
@@ -860,7 +360,6 @@ footer{
 .hiding-p{
     padding-top:5px;
 }
-
 
 .hidden-box-2{
   /* display: none; */
@@ -890,16 +389,11 @@ footer{
   display: block;
   max-height: 600px
 }
-
-
-
 .rotate-180 {
   transform: rotate(180deg);
-  transition: transform 0.3s ease; /* Adjust the transition duration and easing as needed */
+  transition: transform 0.3s ease; 
 }
-
 /* slider dots */
-
  .dot-container {
       display: flex;
       justify-content: center;
@@ -907,7 +401,7 @@ footer{
       gap: 10px;
     }
 
-    .dot {
+.dot {
       height: 10px;
       width: 10px;
       margin: 0 5px;
@@ -915,9 +409,7 @@ footer{
       background-color: #bbb;
       cursor: pointer;
     }
-
-    .dot.active {
-      background-color: white;
+.dot.active {
+    background-color: white;
     }
-
   
