--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -320,7 +319,10 @@ justify-content: center;
 }
 
 .partner-box h2{
-    padding-left: 430px;
+    text-align: center;
+    transform: translateX(-18%);
+    font-size: 30px;
+    font-weight: 500;
 }
 .grid-container {
   display: grid;
