--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,23 +1,37 @@
+@font-face {
+    font-family: 'thin';
+    src: url('/src/fonts/font-thin.woff2');
+}
+@font-face {
+    font-family: 'regular';
+    src: url("/src/fonts/font-regular.woff2");
+}
 .text-18{
     font-size: 18px;
     color: rgb(207,207,207);
-    font-weight: 900;
+    font-weight: 700;
+    font-family: "thin";
 }
 
 .text-14{
     font-size: 14px;
     color: rgb(236,236,236);
-    font-weight: 600;
+    font-weight: 500;
+    font-family: "thin";
 }
 .text-20{
      color: rgb(0,174,243);
     cursor: pointer;
     font-size: 22px;
-    font-weight: 900;
+    font-weight: 500;
+    font-family: "thin";
 }
 .text-24{
     font-size: 30px;
     color: rgb(244,244,244);
+    font-family: "thin";
+    font-weight: 500;
+
 }
 .text-34{
     font-size: 34px;
@@ -25,5 +39,6 @@
 
 .text-32{
     font-size: 32px;
-    color:rgb(244,244,244) ;
+    color:rgb(244,244,244);
+    font-family: "thin";
 }
