--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -18,6 +18,10 @@ footer{
     flex-direction: column;
     gap: 50px;
 }
+.footer-box a{
+    font-size: 18px;
+   font-family: 'thin';
+}
 .footer-link{
     font-size: 22px;
     color: rgb(255,250,252);
