--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(26,30,31);
-    gap: 450px;
+    gap: 370px;
     padding: 24px 0;
     position: relative;
     
@@ -35,7 +35,7 @@
     align-items: center;  
 }
 .nav-list a{
-    font-size: 16px;
+    font-size: 14px;
     text-decoration: none;
     color: #f4f4f4;
     transition: 0.5s;  
@@ -46,7 +46,8 @@
 .navbar li{
     list-style: none;
     font-weight: 100;
-    font-family: Arial, Helvetica, sans-serif;  
+    font-family: "regular"; 
+    cursor: pointer; 
 }
 .nav-list a:hover{
     color: rgb(5,146,199);
