--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -1,4 +1,3 @@
-
 @media (max-width: 1650px){
  .box-header{
     padding-left: 0;
@@ -10,6 +9,9 @@
 
     footer{
         padding: 50px 100px;
+    }
+    .faq-box{
+        padding: 0;
     }
 }
 
@@ -179,13 +181,12 @@
     gap: 40px;
     color: rgb(244,244,244);
     transition: all 0.5s ease-in-out;
-
-
 } 
 
 .navbar-open-nav{
     transform: translateX(0);
     transition: all 0.5s ease-in-out;
+    font-family: "regular";
 }
 .close-menu-icon{
     display: block;
@@ -245,6 +246,9 @@
   grid-gap: 40px; 
 
 }
+.faq-link{
+    margin-bottom: 30px;
+}
 .rights{
     flex-direction: column-reverse;
 }
@@ -272,7 +276,7 @@ font-family: 'thin';
     padding: 5px 15px;
 }
 .questions p{
-    font-size: 24px;
+    font-size: 20px;
 }
 
 
