--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -272,12 +272,14 @@ justify-content: center;
             display: flex;
             text-align: center; 
             gap: 120px;
+            position: absolute;
         }
 
         .custom-partners-wrapper img {
             max-width: 100%;
             height: auto;
-            display: none;
+            /* display: none; */
+            opacity: 0;
             margin: 0 auto; 
             transition: opacity 1s ease-in-out; 
         }
