--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -8,8 +8,7 @@
 }
 .text-18{
     font-size: 18px;
-    color: rgb(207,207,207);
-    font-weight: 700;
+    color: #f4f4f4;
     font-family: "thin";
 }
 
